Add nightMode and more